--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Random Chat</string>
+    <string name="app_name">Publicaciones Anónimas</string>
     <string name="action_settings">Settings</string>
     <string name="intro_slidewelcome_title">Chat Anónimo</string>
     <string name="intro_slidewelcome_description">!Bienvenido! Publica post anónimos, y conoce nuevas personas.</string>
@@ -60,6 +60,14 @@
     <string name="user_default_description">Un par de palabras sobre ti, qué música escuchas, cuáles son tus libros favoritos, qué tipos de películas ves.</string>
     <string name="user_default_location">Android Developer, Uber Inc.</string>
     <string name="profile_text_sendmessage">Enviar Mensaje</string>
+    <string name="appinfo_item_email">E-mail</string>
+    <string name="appinfo_item_instagram">Instagram</string>
+    <string name="appinfo_item_facebook">Facebook</string>
+    <string name="appinfo_item_sourcecode">Source Code</string>
+    <string name="appinfo_item_copyright">Publicaciones Anónimas 1.0\nCopyright ©2017\nSteve Campos</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
