--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Publicaciones Anónimas</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configuraciones</string>
     <string name="intro_slidewelcome_description">!Bienvenido! Publica post anónimos, y conoce nuevas personas.</string>
     <string name="intro_slidepost_title">Post Anónimos</string>
     <string name="intro_slidepost_description">Postea, comenta y conecta con muchas personas.</string>
